fix/styles_part_2

--- a/index.html
+++ b/index.html
@@ -23,9 +23,11 @@
       <!-- header -->
       <header class="header">
         <div class="header-container">
-          <a href="./index.html" class="logo-head link"
-            >Web<span class="accent1">Studio</span></a
-          >
+          <div class="logo">
+            <a href="./index.html" class="logo-head link"
+              >Web<span class="accent1">Studio</span></a
+            >
+          </div>
           <div class="main-nav">
             <nav class="nav">
               <ul class="header-list">
@@ -135,8 +137,8 @@
 
       <main>
         <!-- Hero -->
-        <section class="hero overlay">
-          <div>
+        <section>
+          <div class="hero overlay">
             <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
             <button
               type="button"
@@ -148,8 +150,8 @@
           </div>
         </section>
         <!-- Section-1 -->
-        <section class="section-features">
-          <div class="">
+        <section>
+          <div class="section-features">
             <h2 class="visually-hidden">Our advantages</h2>
             <ul class="features">
               <li class="feature__item">
@@ -205,8 +207,8 @@
         </section>
 
         <!-- Section-2 -->
-        <section class="to-do-section">
-          <div class="">
+        <section>
+          <div class="to-do-section">
             <h2 class="to-do">What we do</h2>
             <ul class="our-work">
               <li class="to-do__item">
@@ -281,8 +283,8 @@
 
         <!-- Section-3 -->
 
-        <section class="section-our-team">
-          <div>
+        <section>
+          <div class="section-our-team">
             <h2 class="our-team">Our Team</h2>
             <ul class="team-members">
               <li class="team-list__item">
@@ -567,8 +569,8 @@
 
         <!-- Section-4 -->
 
-        <section class="clients">
-          <div class="">
+        <section>
+          <div class="clients">
             <h2 class="clients-title">Regular Customers</h2>
             <ul class="clients-list list">
               <li class="clients-list__item">
@@ -620,7 +622,7 @@
 
       <!-- Section-5 -->
       <footer class="footer">
-        <div class="container footer-list">
+        <div class="footer-list">
           <div class="footer-nav">
             <a href="./index.html" class="logo-foot link"
               >Web<span class="accent2">Studio</span></a
@@ -817,13 +819,16 @@
               </ul>
 
           </div>  -->
-      <!-- <script defer src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
-            integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
-            crossorigin="anonymous"></script> -->
+      <script
+        defer
+        src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+        integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+        crossorigin="anonymous"
+      ></script>
 
       <script src="./js/menu.js"></script>
 
-      <script src="./js/modal.js"></script>
+      <!-- <script src="./js/modal.js"></script> -->
     </div>
   </body>
 </html>
