--- a/portfolio.html
+++ b/portfolio.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Web Studio</title>
     <link
       href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
       rel="stylesheet"
@@ -19,78 +19,172 @@
     <link rel="stylesheet" href="./css/main.min.css" />
   </head>
   <body>
-    <div class="container">
-      <!-- header -->
-      <header class="header">
-        <div class="header-container">
+    <!-- header -->
+    <header class="header">
+      <div class="header-container container">
+        <div>
           <a href="./index.html" class="logo-head link"
             >Web<span class="accent1">Studio</span></a
           >
-          <div class="main-nav">
-            <nav class="nav">
-              <ul class="header-list">
-                <li class="header__item">
-                  <a href="./index.html" class="nav__studio link">Studio</a>
+        </div>
+        <div class="main-nav">
+          <nav class="nav">
+            <ul class="header-list">
+              <li class="header__item">
+                <a href="./index.html" class="nav__studio link">Studio</a>
+              </li>
+              <li class="header__item">
+                <a href="./portfolio.html" class="nav__portfolio current link"
+                  >Portfolio</a
+                >
+              </li>
+              <li class="header__item">
+                <a href="" class="nav__contact link">Contacts</a>
+              </li>
+            </ul>
+          </nav>
+          <ul class="contact-list">
+            <li class="contact__item">
+              <a href="mailto:info@devstudio.com" class="contact-mail__link">
+                <svg class="contact-icon" width="16" height="12">
+                  <use href="./images/icons.svg#icon-envelope"></use>
+                </svg>
+                info@devstudio.com</a
+              >
+            </li>
+            <li class="contact__item">
+              <a href="tel:+12127724150" class="contact-tel__link link">
+                <svg class="contact-icon" width="10" height="16">
+                  <use href="./images/icons.svg#icon-Vector"></use>
+                </svg>
+                +1 212-772-4150</a
+              >
+            </li>
+          </ul>
+        </div>
+
+        <!-- Mobile menu -->
+
+        <button
+          class="menu-toggle js-open-menu"
+          aria-expanded="false"
+          aria-controls="mobile-menu"
+        >
+          <svg width="40" height="40" class="menu-icon">
+            <use href="images/icons.svg#burger-menu"></use>
+          </svg>
+        </button>
+
+        <div class="menu-container js-menu-container" id="mobile-menu">
+          <button class="menu-toggle js-close-menu">
+            <svg width="40" height="40" class="menu-icon">
+              <use href="images/icons.svg#menu-close"></use>
+            </svg>
+          </button>
+
+          <div class="mobile-content">
+            <div>
+              <ul class="mobile-nav">
+                <li class="mobile-item">
+                  <a href="./index.html" class="mobile-link link">Studio</a>
                 </li>
-                <li class="header__item">
-                  <a href="./portfolio.html" class="nav__portfolio current link"
+                <li class="mobile-item">
+                  <a href="./portfolio.html" class="mobile-link link"
                     >Portfolio</a
                   >
                 </li>
-                <li class="header__item">
-                  <a href="" class="nav__contact link">Contacts</a>
+                <li class="mobile-item">
+                  <a href="#" class="mobile-link link">Contacts</a>
                 </li>
               </ul>
-            </nav>
-            <div>
-              <ul class="contact-list">
-                <li class="contact__item">
-                  <a
-                    href="mailto:info@devstudio.com"
-                    class="contact-mail__link link"
-                  >
-                    <svg class="contact-icon" width="16" height="12">
-                      <use href="./images/icons.svg#icon-envelope"></use>
-                    </svg>
-                    info@devstudio.com</a
+            </div>
+            <div class="mobile-contact">
+              <ul>
+                <li>
+                  <a href="" class="mobile-tel-link link">+1 212-772-4150</a>
+                </li>
+                <li class="mob-email-item">
+                  <a href="" class="mobile-email-item link"
+                    >info@devstudio.com</a
                   >
                 </li>
-                <li class="contact__item">
-                  <a href="tel:+12127724150" class="contact-tel__link link">
-                    <svg class="contact-icon" width="10" height="16">
-                      <use href="./images/icons.svg#icon-Vector"></use>
-                    </svg>
-                    +1 212-772-4150</a
+              </ul>
+              <ul class="mobile-socials list">
+                <li class="mobile-socials-item">
+                  <a
+                    href="#"
+                    class="mobile-socials-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Instagram</a
+                  >
+                </li>
+                <li class="mobile-socials-item">
+                  <a
+                    href="#"
+                    class="mobile-socials-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Twitter</a
+                  >
+                </li>
+                <li class="mobile-socials-item">
+                  <a
+                    href="#"
+                    class="mobile-socials-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Facebook</a
+                  >
+                </li>
+                <li class="mobile-socials-item">
+                  <a
+                    href="#"
+                    class="mobile-socials-link link"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >LinkedIn</a
                   >
                 </li>
               </ul>
             </div>
           </div>
         </div>
-      </header>
+      </div>
+    </header>
 
-      <!-- Section title -->
+    <!-- Section title -->
 
-      <main class="main-content">
-        <!-- <div class="container"> -->
-        <ul class="button-list">
-          <li>
-            <button type="button" class="button-all button">All</button>
-          </li>
-          <li>
-            <button type="button" class="all-web button">Web-sites</button>
-          </li>
-          <li><button type="button" class="apps button">Apps</button></li>
-          <li>
-            <button type="button" class="design button">Design</button>
-          </li>
-          <li>
-            <button type="button" class="marketing button">Marketing</button>
-          </li>
-        </ul>
+    <main>
+      <section class="portfolio-main">
+        <div class="container">
+          <ul class="button-list">
+            <li>
+              <button type="button" class="all-btn button-item">All</button>
+            </li>
+            <li>
+              <button type="button" class="web-btn button-item">
+                Web-sites
+              </button>
+            </li>
+            <li>
+              <button type="button" class="apps-btn button-item">Apps</button>
+            </li>
+            <li>
+              <button type="button" class="design-btn button-item">
+                Design
+              </button>
+            </li>
+            <li>
+              <button type="button" class="marketing-btn button-item">
+                Marketing
+              </button>
+            </li>
+          </ul>
+        </div>
         <h1 class="visually-hidden">Link to pages</h1>
-        <div class="portfolio-content">
-          <ul class="cards-content">
+        <div class="container">
+          <ul class="cards-list">
             <li class="card-item">
               <div class="action-cover">
                 <picture>
@@ -121,7 +215,7 @@
                   <img
                     src="./images/portfolio/card-1-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -167,7 +261,7 @@
                   <img
                     src="./images/portfolio/card-2-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -213,7 +307,7 @@
                   <img
                     src="./images/portfolio/card-3-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -259,7 +353,7 @@
                   <img
                     src="./images/portfolio/card-4-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -305,7 +399,7 @@
                   <img
                     src="./images/portfolio/card-5-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -351,7 +445,7 @@
                   <img
                     src="./images/portfolio/card-6-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -397,7 +491,7 @@
                   <img
                     src="./images/portfolio/card-7-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -443,7 +537,7 @@
                   <img
                     src="./images/portfolio/card-8-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -489,7 +583,7 @@
                   <img
                     src="./images/portfolio/card-9-1x-min.jpg"
                     alt="Technoduck"
-                    width="370"
+                    width="450"
                     height="294"
                   />
                 </picture>
@@ -507,11 +601,12 @@
             </li>
           </ul>
         </div>
-        <!-- </div> -->
-      </main>
+      </section>
+    </main>
 
-      <!-- Section-5 -->
-      <footer class="footer">
+    <!-- Section-5 -->
+    <footer class="footer">
+      <div class="container">
         <div class="footer-list">
           <div class="footer-nav">
             <a href="./index.html" class="logo-foot link"
@@ -594,7 +689,15 @@
             </div>
           </form>
         </div>
-      </footer>
-    </div>
+      </div>
+    </footer>
+    <script
+      defer
+      src="https://cdnjs.cloudflare.com/ajax/libs/body-scroll-lock/3.1.5/bodyScrollLock.min.js"
+      integrity="sha512-HowizSDbQl7UPEAsPnvJHlQsnBmU2YMrv7KkTBulTLEGz9chfBoWYyZJL+MUO6p/yBuuMO/8jI7O29YRZ2uBlA=="
+      crossorigin="anonymous"
+    ></script>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
