fix/styles_part_8

--- a/portfolio.html
+++ b/portfolio.html
@@ -20,8 +20,9 @@
   </head>
   <body>
     <!-- header -->
+
     <header class="header">
-      <div class="header-container container">
+      <div class="container">
         <div>
           <a href="./index.html" class="logo-head link"
             >Web<span class="accent1">Studio</span></a
@@ -39,7 +40,7 @@
                 >
               </li>
               <li class="header__item">
-                <a href="" class="nav__contact link">Contacts</a>
+                <a href="#" class="nav__contact link">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -85,26 +86,30 @@
           <div class="mobile-content">
             <div>
               <ul class="mobile-nav">
-                <li class="mobile-item">
+                <li>
                   <a href="./index.html" class="mobile-link link">Studio</a>
                 </li>
-                <li class="mobile-item">
+                <li>
                   <a href="./portfolio.html" class="mobile-link link"
                     >Portfolio</a
                   >
                 </li>
-                <li class="mobile-item">
+                <li>
                   <a href="#" class="mobile-link link">Contacts</a>
                 </li>
               </ul>
             </div>
-            <div class="mobile-contact">
+            <div>
               <ul>
                 <li>
-                  <a href="" class="mobile-tel-link link">+1 212-772-4150</a>
+                  <a href="tel:+12127724150" class="mobile-tel-link link"
+                    >+1 212-772-4150</a
+                  >
                 </li>
                 <li class="mob-email-item">
-                  <a href="" class="mobile-email-item link"
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="mobile-email-item link"
                     >info@devstudio.com</a
                   >
                 </li>
@@ -153,7 +158,7 @@
       </div>
     </header>
 
-    <!-- Section title -->
+    <!-- Section main -->
 
     <main>
       <section class="portfolio-main">
@@ -219,7 +224,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/web-site1.jpg" alt="site page" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -265,7 +269,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/design1.jpg" alt="basketball play" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -311,7 +314,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/app1.jpg" alt="restaurant logo" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -357,7 +359,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/marketing1.jpg" alt="headphoners" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -403,7 +404,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/app2.jpg" alt="two boxes" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -449,7 +449,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/web-site2.jpg" alt="desktop" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -495,7 +494,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/design2.jpg" alt="magazine" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -541,7 +539,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/marketing2.jpg" alt="lable" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -587,7 +584,6 @@
                     height="294"
                   />
                 </picture>
-                <!-- <img src="./images2/app3.jpg" alt="laptop" width="370" height="294"/> -->
                 <p class="action-cover-text">
                   Technoduck is a state-of-the-art coronavirus distribution
                   platform. Companies use this platform for digital espionage
@@ -604,7 +600,8 @@
       </section>
     </main>
 
-    <!-- Section-5 -->
+    <!-- Section footer -->
+
     <footer class="footer">
       <div class="container">
         <div class="footer-list">
@@ -624,7 +621,9 @@
                   >
                 </li>
                 <li class="foot-details">
-                  <a href="mailto:info@example.com" class="footer-contacts link"
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="footer-contacts link"
                     >info@devstudio.com</a
                   >
                 </li>
@@ -640,28 +639,28 @@
             <h3 class="footer-title">Find us on</h3>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
