--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
   </head>
   <body>
     <!-- header -->
+
     <header class="header">
-      <div class="header-container container">
+      <div class="container">
         <div>
           <a href="./index.html" class="logo-head link"
             >Web<span class="accent1">Studio</span></a
@@ -41,7 +42,7 @@
                 >
               </li>
               <li class="header__item">
-                <a href="" class="nav__contact link">Contacts</a>
+                <a href="#" class="nav__contact link">Contacts</a>
               </li>
             </ul>
           </nav>
@@ -87,26 +88,30 @@
           <div class="mobile-content">
             <div>
               <ul class="mobile-nav">
-                <li class="mobile-item">
+                <li>
                   <a href="./index.html" class="mobile-link link">Studio</a>
                 </li>
-                <li class="mobile-item">
+                <li>
                   <a href="./portfolio.html" class="mobile-link link"
                     >Portfolio</a
                   >
                 </li>
-                <li class="mobile-item">
+                <li>
                   <a href="#" class="mobile-link link">Contacts</a>
                 </li>
               </ul>
             </div>
-            <div class="mobile-contact">
+            <div>
               <ul>
                 <li>
-                  <a href="" class="mobile-tel-link link">+1 212-772-4150</a>
+                  <a href="tel:+12127724150" class="mobile-tel-link link"
+                    >+1 212-772-4150</a
+                  >
                 </li>
                 <li class="mob-email-item">
-                  <a href="" class="mobile-email-item link"
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="mobile-email-item link"
                     >info@devstudio.com</a
                   >
                 </li>
@@ -157,19 +162,18 @@
 
     <main>
       <!-- Hero -->
+
       <section>
         <div class="hero">
           <h1 class="hero-title">EFFECTIVE SOLUTIONS FOR YOUR BUSINESS</h1>
-          <button
-            type="button"
-            class="section-button hero-title__button"
-            data-modal-open
-          >
+          <button type="button" class="hero-title__button" data-modal-open>
             Request our service
           </button>
         </div>
       </section>
+
       <!-- Section-1 -->
+
       <section>
         <div class="section-features">
           <div class="container">
@@ -229,14 +233,14 @@
       </section>
 
       <!-- Section-2 -->
+
       <section>
         <div class="container">
           <div class="to-do-section">
             <h2 class="to-do">What we do</h2>
             <ul class="our-work">
-              <li class="to-do__item">
+              <li>
                 <div class="thumb-to-do">
-                  <!-- <img class="img" src="./images/our-business/box1.jpg" alt="програмирование" width="370" height="294"/> -->
                   <picture>
                     <source
                       srcset="
@@ -256,9 +260,8 @@
                   <p class="to-do-item__text">DESKTOP APPS</p>
                 </div>
               </li>
-              <li class="to-do__item">
+              <li>
                 <div class="thumb-to-do">
-                  <!-- <img class="img" src="./images/our-business/box2.jpg" alt="дизайн" width="370" height="294"/> -->
                   <picture>
                     <source
                       srcset="
@@ -278,9 +281,8 @@
                   <p class="to-do-item__text">MOBILE APPS</p>
                 </div>
               </li>
-              <li class="to-do__item">
+              <li>
                 <div class="thumb-to-do">
-                  <!-- <img class="img" src="./images/our-business/box3.jpg" alt="подбор цветов" width="370" height="294"/> -->
                   <picture>
                     <source
                       srcset="
@@ -340,40 +342,39 @@
                   />
                   <img
                     src="./images/ourteam/team-1-1x-min.jpg"
-                    alt="Игорь Демьяненко"
+                    alt="Christopher Walker"
                     width="450"
                     height="460"
                   />
                 </picture>
-                <!-- <a href=""><img src="./images1/igor.jpg" alt="парень в очках" width="270" height="260"></a> -->
                 <div class="card-name">
                   <h3 class="card-name__pre-text">Christopher Walker</h3>
                   <p class="card-name__post-text">Product Designer</p>
                   <ul class="soc list">
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -382,7 +383,6 @@
                 </div>
               </li>
               <li class="team-list__item">
-                <!-- <a href=""><img src="./images1/olga.jpg" alt="блондинка" width="270" height="260"></a> -->
                 <picture>
                   <source
                     srcset="
@@ -410,7 +410,7 @@
                   />
                   <img
                     src="./images/ourteam/team-2-1x-min.jpg"
-                    alt="Ольга Репина"
+                    alt="Kylie Evans"
                     width="450"
                     height="460"
                   />
@@ -420,29 +420,29 @@
                   <p class="card-name__post-text">Frontend Developer</p>
                   <ul class="soc list">
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -451,7 +451,6 @@
                 </div>
               </li>
               <li class="team-list__item">
-                <!-- <a href=""><img src="./images1/nik.jpg" alt="парень в рубахе" width="270" height="260"></a> -->
                 <picture>
                   <source
                     srcset="
@@ -479,7 +478,7 @@
                   />
                   <img
                     src="./images/ourteam/team-3-1x-min.jpg"
-                    alt="Николай Тарасов"
+                    alt="Ryan Harris"
                     width="450"
                     height="460"
                   />
@@ -489,29 +488,29 @@
                   <p class="card-name__post-text">Marketing</p>
                   <ul class="soc list">
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -520,7 +519,6 @@
                 </div>
               </li>
               <li class="team-list__item">
-                <!-- <a href=""><img src="./images1/mikh.jpg" alt="парень в футболке" width="270" height="260"></a> -->
                 <picture>
                   <source
                     srcset="
@@ -548,7 +546,7 @@
                   />
                   <img
                     src="./images/ourteam/team-4-1x-min.jpg"
-                    alt="Михаил Ермаков"
+                    alt="Tyler Moore"
                     width="450"
                     height="460"
                   />
@@ -558,29 +556,29 @@
                   <p class="card-name__post-text">UI Designer</p>
                   <ul class="soc list">
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-instagram"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-twitter"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-facebook"></use>
                         </svg>
                       </a>
                     </li>
                     <li class="soc__item">
-                      <a href="" class="soc-link link">
-                        <svg class="soc__icon" width="20" height="20">
+                      <a href="#" class="soc-link link">
+                        <svg width="20" height="20">
                           <use href="./images/icons.svg#icon-linkedin"></use>
                         </svg>
                       </a>
@@ -601,43 +599,43 @@
             <h2 class="clients-title">Regular Customers</h2>
             <ul class="clients-list list">
               <li class="clients-list__item">
-                <a href="" class="clients-list__link link">
-                  <svg class="clients-list__icon" width="106" height="60">
+                <a href="#" class="clients-list__link link">
+                  <svg width="106" height="60">
                     <use href="./images/icons.svg#icon-Logo"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients-list__item">
-                <a href="" class="clients-list__link link">
-                  <svg class="clients-list__icon" width="106" height="60">
+                <a href="#" class="clients-list__link link">
+                  <svg width="106" height="60">
                     <use href="./images/icons.svg#icon-Logo-1"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients-list__item">
-                <a href="" class="clients-list__link link">
-                  <svg class="clients-list__icon" width="106" height="60">
+                <a href="#" class="clients-list__link link">
+                  <svg width="106" height="60">
                     <use href="./images/icons.svg#icon-Logo-2"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients-list__item">
-                <a href="" class="clients-list__link link">
-                  <svg class="clients-list__icon" width="106" height="60">
+                <a href="#" class="clients-list__link link">
+                  <svg width="106" height="60">
                     <use href="./images/icons.svg#icon-Logo-3"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients-list__item">
-                <a href="" class="clients-list__link link">
-                  <svg class="clients-list__icon" width="106" height="60">
+                <a href="#" class="clients-list__link link">
+                  <svg width="106" height="60">
                     <use href="./images/icons.svg#icon-Logo-4"></use>
                   </svg>
                 </a>
               </li>
               <li class="clients-list__item">
-                <a href="" class="clients-list__link link">
-                  <svg class="clients-list__icon" width="106" height="60">
+                <a href="#" class="clients-list__link link">
+                  <svg width="106" height="60">
                     <use href="./images/icons.svg#icon-Logo-5"></use>
                   </svg>
                 </a>
@@ -649,6 +647,7 @@
     </main>
 
     <!-- Section-5 -->
+
     <footer class="footer">
       <div class="container">
         <div class="footer-list">
@@ -668,7 +667,9 @@
                   >
                 </li>
                 <li class="foot-details">
-                  <a href="mailto:info@example.com" class="footer-contacts link"
+                  <a
+                    href="mailto:info@devstudio.com"
+                    class="footer-contacts link"
                     >info@devstudio.com</a
                   >
                 </li>
@@ -684,28 +685,28 @@
             <h3 class="footer-title">Find us on</h3>
             <ul class="footer-social-list">
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-instagram"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-twitter"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-facebook"></use>
                   </svg>
                 </a>
               </li>
               <li class="footer-social-item">
-                <a href="" class="footer-social-link link">
+                <a href="#" class="footer-social-link link">
                   <svg class="footer-social-icon" width="20" height="20">
                     <use href="./images/icons.svg#icon-linkedin"></use>
                   </svg>
@@ -810,7 +811,7 @@
           data-modal-close
           class="modal-close-btn"
         >
-          <svg class="modal-icon" width="18" height="18">
+          <svg width="18" height="18">
             <use href="./images/icons.svg#close-window"></use>
           </svg>
         </button>
